--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,20 +4,9 @@
 <div class="row mt-4">
     <div class="col-md-8">
         <h2>Devices</h2>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>IP Address</th>
-                    <th>Status</th>
-                    <th>Last Checked</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody id="device-list">
-                <!-- Devices will be loaded here by JavaScript -->
-            </tbody>
-        </table>
+        <div id="device-list" class="row">
+            <!-- Devices will be loaded here by JavaScript -->
+        </div>
     </div>
     <div class="col-md-4">
         <h2>Add Device</h2>
@@ -44,9 +33,21 @@
 
 <div class="row mt-4">
     <div class="col-md-12">
-        <h2>Device History</h2>
-        <canvas id="ping-chart"></canvas>
+        <h2>Network Matrix</h2>
+        <div class="row">
+            <div class="col-md-4">
+                <h3>RTT (ms)</h3>
+                <canvas id="rtt-chart"></canvas>
+            </div>
+            <div class="col-md-4">
+                <h3>Jitter (ms)</h3>
+                <canvas id="jitter-chart"></canvas>
+            </div>
+            <div class="col-md-4">
+                <h3>Packet Loss (%)</h3>
+                <canvas id="packet-loss-chart"></canvas>
+            </div>
+        </div>
     </div>
 </div>
-
 {% endblock %}
